--- a/tarefa_01.html
+++ b/tarefa_01.html
@@ -31,6 +31,7 @@
     <article>Dentre outros aspectos, os reviews têm destacado a excelente modernização
     do gameplay, os novos elementos da história, a ambientação mais aterrorizante
     e o visual estonteante dos cenários e modelos de personagem.</article>
+    <article> bgyhyroy8hgy  </article>
 
 </body>
 </html>
