--- a/tarefa_01.html
+++ b/tarefa_01.html
@@ -32,6 +32,7 @@
     do gameplay, os novos elementos da história, a ambientação mais aterrorizante
     e o visual estonteante dos cenários e modelos de personagem.</article>
     <article> bgyhyroy8hgy5h56gy6456ty54tg54tf54t5t5tr5  </article>
+    <article>vhnrgvrygvhreg</article>
 
 </body>
 </html>
