--- a/tarefa_01.html
+++ b/tarefa_01.html
@@ -33,6 +33,7 @@
     e o visual estonteante dos cenários e modelos de personagem.</article>
     <article> bgyhyroy8hgy5h56gy6456ty54tg54tf54t5t5tr5  </article>
     <article>vhnrgvrygvhreg</article>
+    <article>rjgujeru´jgp0jg</article>
 
 </body>
 </html>
