--- a/tarefa_01.html
+++ b/tarefa_01.html
@@ -28,12 +28,22 @@
     <article>Resident Evil 4 Remake está com médias altíssimas nos agregadores
     de notas. No Metacritic, as versões de PC, PS5 e Xbox Series ultrapassam
      a média de 90 (na avaliação dos críticos da mídia especializada).</article>
+
     <article>Dentre outros aspectos, os reviews têm destacado a excelente modernização
     do gameplay, os novos elementos da história, a ambientação mais aterrorizante
     e o visual estonteante dos cenários e modelos de personagem.</article>
-    <article> bgyhyroy8hgy5h56gy6456ty54tg54tf54t5t5tr5  </article>
-    <article>vhnrgvrygvhreg</article>
-    <article>rjgujeru´jgp0jg</article>
+
+    <article>“Se o original era um 100 na época, eu não consigo pensar de que
+    outra maneira este aqui não teria nota perfeita, mesmo com probleminhas
+    extremamente pontuais. No fim, se prepare pra se deleitar em uma campanha
+    extremamente coesa, divertida, viciante e que renova um clássico pra um
+    nível moderno”, destacou Vinicius Munhoz, editor do Voxel.</article>
+    <br>
+    <article>A edição do game lançada na semana passada é a 12ª do jogo,
+    que <ins>estreou no Game Cube lá em 2005.</ins> Desde então, PlayStation 2,
+    Nintendo Wii, PS3, Xbox 360, Android e até o Zeebo já tiveram suas
+    versões do título.</article>
+    
 
 </body>
 </html>
